public/stylesheets/style.css
body {
  background: #222222;
  color: #ddd;
  padding: 50px;
  font: 16px "Helvetica Nueue", Arial, sans-serif;
  overflow:hidden;
}

a {
	color: #fff;
}

#slide-edit textarea[name='content'] {
	width: 100%;
	height: 600px;
	font-size: 120%;
}

#slide-controls {
	position: absolute;
	right: 10px;
	bottom: 10px;
}


/* PLAY MODE */
.outerContainer {
	position:absolute;
	top:0;
	left:0;
	height:768px;
	width:1024px;
	-moz-transform-origin: 0 0;
	-webkit-transform-origin: 0 0;
	overflow:hidden;
}
#slideContainer {
	position:absolute;
	top:0;
	left:0;
	height:100%;
	width:100%;
	margin:0;
}
#slideContainer .currentSlide,
#slideContainer .nextSlide {
	position:absolute;
	left:0;
	top:0;
	width:100%;
	height:100%;
	-webkit-transition: all 1s ease-in-out;
	-moz-transition: all 1s ease-in-out;
	-o-transition: all 1s ease-in-out;
	transition: all 1s ease-in-out;
}

/*===========================*/
/* Slide Transitions         */
/*===========================*/
/* Fade in the next slide */
#slideContainer .nextSlide {
	opacity:0;
}

#slideContainer.animationRunning .nextSlide {
	opacity:1;
	/*-webkit-transform:scale(1,1);
	-webkit-transform-origin: top right;*/
}

#slideContainer .currentSlide {
	opacity:1;
}
#slideContainer.animationRunning .currentSlide {
	/*-webkit-transform:scale(0,0);
	-webkit-transform-origin: bottom left;*/
	opacity:0;
}

/* PRESENTER MODE */
.outerContainer.presenter {
	-moz-transform:scale(0.5);
	-webkit-transform:scale(0.5);
}

.outerContainer.presenter-nextSlide {
	-moz-transform:scale(0.5);
	-webkit-transform:scale(0.5);
	left:50%;
}

/*===========================*/
/* Animations within a slide */
/*===========================*/

/* Basic Setup */
#slideContainer .inSlideAnimation {
	opacity:1;
	-webkit-transition: all 1s ease-in-out;
	-moz-transition: all 1s ease-in-out;
	-o-transition: all 1s ease-in-out;
	transition: all 1s ease-in-out;
}
#slideContainer .inSlideAnimation.hidden {
	opacity:0;
}

/* Rotate function */
#slideContainer .inSlideAnimation.show.rotate.hidden {
	-webkit-transform:rotate(720deg);
}
#slideContainer .inSlideAnimation.show.rotate {
	-webkit-transform:rotate(0deg);
}

/* move from left */
#slideContainer .inSlideAnimation.show.moveFromLeft.hidden {
	left:-400px;
}
#slideContainer .inSlideAnimation.show.moveFromLeft {
	position:relative;
	left:0px;
}

/* move from right */
#slideContainer .inSlideAnimation.show.moveFromRight.hidden {
	left:1024px;
}
#slideContainer .inSlideAnimation.show.moveFromRight {
	position:relative;
	left:0px;
}

/* move from top */
#slideContainer .inSlideAnimation.show.moveFromTop.hidden {
	top:-768px;
}
#slideContainer .inSlideAnimation.show.moveFromTop {
	position:relative;
	top:0px;
}

/* move from bottom */
#slideContainer .inSlideAnimation.show.moveFromBottom.hidden {
	top:768px;
}
#slideContainer .inSlideAnimation.show.moveFromBottom {
	position:relative;
	top:0px;
}

/* stamp */
#slideContainer .inSlideAnimation.show.stamp.hidden {
	-webkit-transform:scale(3);
}
#slideContainer .inSlideAnimation.show.stamp {
	-webkit-transform:scale(1);
}

/* cube */
#slideContainer .inSlideAnimation.show.cube.hidden {
	-webkit-transform:rotateY(90deg);
}
#slideContainer .inSlideAnimation.show.cube {
	-webkit-transform:rotateY(0);
}

